@startuml
class Receiver{
+answer
+menu_compra()
+menu_inventorio()
+menu_venta()
}

left to right direction
class Inventory{
+sellable:int
+values:str
+change_rent()
}

class Player{
+name:str
+inventory:Inventory
+pos:Nodo
+balance:int
+double_count:int
+on_jail:bool
+times_on_jail:int
+withdraw()
+deposit()
+buy()
+sell()
+throw_die()
+jugar_turno()
+jugar_carcel()
+check_color()
+tksell_menu()
+sell_pass()
}
class dict{
}
class Game{
+players:dict
+board:Board
+start()
+add_player()
+remove_player()
+transfer()
+imprison()
+sacar_carta()
+all_pay_one()
}

class Board{
+PTR:Nodo
+ULT:Nodo
+addnode()
}

class Nodo{
+loc:int
+name:str
+prev:Nodo
+next:Nodo
}
class Propiedad{
+costo
+renta
+color
+owner
}
class Servicio{
+costo
+owner
}
class Ferrocarril{
+costo
+owner
}
Player*--Inventory
Game *--Player
Game o-- Board
Board o-- Nodo
Inventory <|-- dict
Nodo <|-- Propiedad
Nodo <|-- Ferrocarril
Nodo <|-- Servicio
Nodo <|-- Cofre
Nodo <|-- Suerte
Receiver -- Player : Maneja compras de
@enduml